--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11852,6 +11852,27 @@ These findings suggest that subjective listening effort depends on factors inclu
   pmid     = {34060886},
 }
 
+@Article{Simonsohn2020,
+  author    = {Simonsohn, Uri and Simmons, Joseph P. and Nelson, Leif D.},
+  journal   = {Nature Human Behaviour},
+  title     = {Specification curve analysis},
+  year      = {2020},
+  issn      = {2397-3374},
+  month     = nov,
+  number    = {11},
+  pages     = {1208--1214},
+  volume    = {4},
+  abstract  = {Empirical results hinge on analytical decisions that are defensible, arbitrary and motivated. These decisions probably introduce bias (towards the narrative put forward by the authors), and they certainly involve variability not reflected by standard errors. To address this source of noise and bias, we introduce specification curve analysis, which consists of three steps: (1) identifying the set of theoretically justified, statistically valid and non-redundant specifications; (2) displaying the results graphically, allowing readers to identify consequential specifications decisions; and (3) conducting joint inference across all specifications. We illustrate the use of this technique by applying it to three findings from two different papers, one investigating discrimination based on distinctively Black names, the other investigating the effect of assigning female versus male names to hurricanes. Specification curve analysis reveals that one finding is robust, one is weak and one is not robust at all.},
+  copyright = {2020 The Author(s), under exclusive licence to Springer Nature Limited},
+  doi       = {10.1038/s41562-020-0912-z},
+  file      = {Full Text PDF:https\://www.nature.com/articles/s41562-020-0912-z.pdf:application/pdf},
+  keywords  = {Decision making, Economics, Politics, Psychology},
+  language  = {en},
+  publisher = {Nature Publishing Group},
+  url       = {https://www.nature.com/articles/s41562-020-0912-z},
+  urldate   = {2021-11-18},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
