--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -165,7 +165,7 @@ However, we propose that (3c) when taking individual preferences for different n
   
   # import questionnaire data from RedCap
   
-  data_quest <- read.csv(here("04_RawData", "Sampledata", "COGED_DATA.csv"), stringsAsFactors = FALSE, header = TRUE)
+  data_quest <- read.csv(here("04_RawData", "pilot", "CERED_DATA.csv"), stringsAsFactors = FALSE, header = TRUE)
   colnames(data_quest)[1] <- "set" # rename the first column
   
   # remove unnecessary variables from questionnaire data frame
@@ -173,10 +173,9 @@ However, we propose that (3c) when taking individual preferences for different n
   data_quest <- subset(data_quest, select = -c(vl, date, preparatory_coged_complete, general_questions_timestamp, state,
                                                general_questions_complete, inclusion, inclusion_0___1, inclusion_0___2, inclusion_0_2,
                                                researcher_questions_complete, nasatlx_timestamp, nasatlx_complete, t1_psychopy_ed_csv,
-                                               t1_psychopy_ed_psydat, t1_psychopy_nback_csv, t1_psychopy_log, t1_psychopy_nback_psydat,
-                                               t1_psychopy_randch_log, t1_psychopy_randch_psydat, files_coged_complete, record_id_2, vl_er,
-                                               date_er, humid_bef_er, preparatory_ered_complete, emg_eeg, emg_vhdr, emg_vmrk,
-                                               er_ed_psychopy_txt, er_ed_psychopy_psydat, files_ered_complete, followup_ered_timestamp,
+                                               t1_psychopy_nback_csv, files_coged_complete, record_id_2, vl_er,
+                                               date_er, preparatory_ered_complete, emg_eeg, emg_vhdr, emg_vmrk,
+                                               files_ered_complete, followup_ered_timestamp,
                                                nachb_01, nachb_01_inhalt, nachb_02, nachb_02_inhalt, nachb_03, nachb_07, nachb_07_inhalt,
                                                nachb_08, nachb_08_inhalt, nachb_08_haeufig, nachb_08_zurueck, followup_ered_complete,
                                                nfc_timestamp, nfc_complete, bis_11_timestamp, bis_11_complete, bscs_timestamp,
@@ -1082,18 +1081,17 @@ ggplot(melt(setDT(demo_sv), id.vars = "subject", variable.name = "measure"), aes
 
   # prepare empty data frame for the loop to feed into
 
-  h3_data <- data.frame(subject = character(), auc_sv = double(), auc_sv_unsorted = double())
+  h3_data <- data.frame(subject = character(), axauc = double())
 
   # calculate AUC of SVs per subject
   
   for (i in 1:(length(subjectindex)-1)) {
     
     newdata <- data.frame(subject = data_SV$subject[subjectindex[i]],
-                          auc_sv = auc(data_SV$level[subjectindex[i]:(subjectindex[i+1]-1)], data_SV$sv[subjectindex[i]:(subjectindex[i+1]-1)],
-                                   method = "trapezoid", sort = FALSE),
-                          auc_sv_unsorted = (0.5 * (data_SV$sv[subjectindex[i]] + data_SV$sv[subjectindex[i]+1]) +
-                                               0.5 * (data_SV$sv[subjectindex[i]+1] + data_SV$sv[subjectindex[i]+2]) +
-                                               0.5 * (data_SV$sv[subjectindex[i]+2] + data_SV$sv[subjectindex[i]+3])))
+                          axauc = auc(data_SV$level[subjectindex[i]:(subjectindex[i]+3)], data_SV$sv[subjectindex[i]:(subjectindex[i]+3)],
+                                               method = "trapezoid") * ((data_SV$sv[subjectindex[i]+3] - data_SV$sv[subjectindex[i]+2]) +
+                                        (data_SV$sv[subjectindex[i]+2] - data_SV$sv[subjectindex[i]+1]) +
+                                        (data_SV$sv[subjectindex[i]+1] - data_SV$sv[subjectindex[i]])))
     h3_data <- rbind(h3_data, newdata)
     
   }
@@ -1124,14 +1122,14 @@ ggplot(melt(setDT(demo_sv), id.vars = "subject", variable.name = "measure"), aes
   
   # calculate linear model to estimate prediction of NFC by SVs
   
-  hypothesis3a <- summary(lm(h3_data$nfc ~ h3_data$auc_sv))
+  hypothesis3a <- summary(lm(h3_data$nfc ~ h3_data$axauc))
   
   
 
 ```
 
 The AUC of SVs predicted a significant amount of variance in individual NFC scores (`r apa_print(hypothesis3a)$statistic$modelfit$r2`, `r apa_print(hypothesis3a)$estimate$modelfit$r2`).
-An increase in one AUC value corresponded, on average, to an increase of `r round(hypothesis3a$coefficients[2], digits = 1)` on the NFC scale (`r apa_print(hypothesis3a)$estimate$h3_data_auc_sv`).
+An increase in one AUC value corresponded, on average, to an increase of `r round(hypothesis3a$coefficients[2], digits = 1)` on the NFC scale (`r apa_print(hypothesis3a)$estimate$h3_data_axauc`).
 
 ```{r Hypothesis_3b, echo=FALSE, message=FALSE, warning=FALSE}
 
@@ -1181,7 +1179,7 @@ An increase in one AUC value corresponded, on average, to an increase of `r roun
   
   # compute multiple linear regression to predict NCS based on SV AUC and NASA-TLX AUC
   
-  hypothesis3b <- summary(lm(h3_data$nfc ~ h3_data$auc_sv + h3_data$auc_ntlx))
+  hypothesis3b <- summary(lm(h3_data$nfc ~ h3_data$axauc + h3_data$auc_ntlx))
 
 ```
 
