--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1018,59 +1018,6 @@ The SVs of all other n-back level pairs were not significantly different.
 
 ### Changes in subjective values depend reliably on n-back level
 
-```{r AUC_demo, echo=FALSE, message=FALSE, warning=FALSE}
-
-require(gtools)
-demo_data = data.frame(level = rep(1:4,24))
-sv = permutations(n = 4, r = 4, v = c(0.1,0.4,0.85,1))
-m = 1
-for (n in 1:(nrow(demo_data)/4)) {
-  demo_data$subject[m:(m+3)] = rep(n,4)
-  #demo_data$sv[m:(m+3)] = sv[n,]
-  demo_data$sv[m:(m+3)] = sample(x = c(0.11,0.38,0.45,0.53,0.70,0.85,0.90,1.00), size = 4, replace = FALSE, prob = c(0.025,0.025,0.05,0.05,0.05,0.05,0.05,0.7))
-  m = m + 4
-}
-subjectindex <- c(1,which(demo_data$subject != dplyr::lag(demo_data$subject)),nrow(demo_data))
-demo_sv <- data.frame(subject = character(), auc_sv = double(),
-                      ascent_mean = double(), ascent_sum = double(), auc_x_ascentmean = double(), auc_x_ascentsum = double(),
-                      auc_westbrook = double())
-for (i in 1:(length(subjectindex)-1)) {
-  sv_sorted <- sort(demo_data$sv[subjectindex[i]:(subjectindex[i]+3)])
-  newdata <- data.frame(subject = demo_data$subject[subjectindex[i]],
-                        auc_sv = auc(demo_data$level[subjectindex[i]:(subjectindex[i]+3)], demo_data$sv[subjectindex[i]:(subjectindex[i]+3)],
-                                   method = "trapezoid"),
-                        auc_sv_sorted = (0.5 * (sv_sorted[1] + sv_sorted[2]) +
-                                           0.5 * (sv_sorted[2] + sv_sorted[3]) +
-                                           0.5 * (sv_sorted[3] + sv_sorted[4])),
-                        ascent_mean = ((demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
-                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
-                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]]))/3,
-                        ascent_sum = (demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
-                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
-                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]]),
-                        auc_x_ascentmean = auc(demo_data$level[subjectindex[i]:(subjectindex[i]+3)], demo_data$sv[subjectindex[i]:(subjectindex[i]+3)],
-                                               method = "trapezoid") * (((demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
-                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
-                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]]))/3),
-                        auc_x_ascentsum = auc(demo_data$level[subjectindex[i]:(subjectindex[i]+3)], demo_data$sv[subjectindex[i]:(subjectindex[i]+3)],
-                                               method = "trapezoid") * ((demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
-                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
-                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]])),
-                        auc_westbrook = (0.5 * (sv_sorted[1] + sv_sorted[2]) +
-                                           0.5 * (sv_sorted[1] + sv_sorted[3]) +
-                                           0.5 * (sv_sorted[1] + sv_sorted[4]))/3)
-  demo_sv <- rbind(demo_sv, newdata)
-}
-demo_cor <- cor(demo_sv$auc_sv, demo_sv$auc_westbrook)
-
-ggplot(demo_data, aes(x=level, y=sv, group=subject)) +
-  geom_line(aes(color=subject), size = 1)
-
-#library(data.table) for the melt function
-ggplot(melt(setDT(demo_sv), id.vars = "subject", variable.name = "measure"), aes(fill=measure,y=value,x=subject)) + geom_bar(position = "dodge", stat = "identity")
-```
-
-
 ```{r Hypothesis_3a, echo=FALSE, message=FALSE, warning=FALSE}
 
   # H3a: Subjective values predict individual NCS scores.
@@ -1128,8 +1075,7 @@ ggplot(melt(setDT(demo_sv), id.vars = "subject", variable.name = "measure"), aes
 
 ```
 
-The AUC of SVs predicted a significant amount of variance in individual NFC scores (`r apa_print(hypothesis3a)$statistic$modelfit$r2`, `r apa_print(hypothesis3a)$estimate$modelfit$r2`).
-An increase in one AUC value corresponded, on average, to an increase of `r round(hypothesis3a$coefficients[2], digits = 1)` on the NFC scale (`r apa_print(hypothesis3a)$estimate$h3_data_axauc`).
+The $AxAUC$ value did not predict any amount of variance in individual NFC scores (`r apa_print(hypothesis3a)$statistic$modelfit$r2`, `r apa_print(hypothesis3a)$estimate$modelfit$r2`).
 
 ```{r Hypothesis_3b, echo=FALSE, message=FALSE, warning=FALSE}
 
@@ -1183,7 +1129,7 @@ An increase in one AUC value corresponded, on average, to an increase of `r roun
 
 ```
 
-When including the AUC of all NASA-TLX subscales as a predictor, it could not explain any variance in NFC beyond the one explained by the SVs (`r apa_print(hypothesis3b)$statistic$modelfit$r2`, `r apa_print(hypothesis3b)$estimate$modelfit$r2`).
-
+When including the AUC of all NASA-TLX subscales as a predictor, it could explain variance in NFC beyond the one (not) explained by the SVs (`r apa_print(hypothesis3b)$statistic$modelfit$r2`, `r apa_print(hypothesis3b)$estimate$modelfit$r2`).
+An increase in one NASA_NTLX AUC value corresponded, on average, to a decrease of `r round(hypothesis3b$coefficients[2], digits = 1)` on the NFC scale (`r apa_print(hypothesis3b)$estimate$h3_data_auc_ntlx`).
 
 
