--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -324,6 +324,12 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6326885/pdf/nihms-1515865.pdf},
    year = {2019}
 }
 
+@misc{RCore2020,
+   url = {https://www.R-project.org/},
+   year = {2020},
+   type = {Computer Program}
+}
+
 @Misc{RStudioTeam2020,
   author    = {{RStudio Team}},
   note      = {Programmers: \_:n3594},
