added text to statistics

--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -165,5 +165,7 @@ Attentional control was assessed using the Attentional Control Scale (ACS) [@Der
 
 ## 2.7 Statistics 
 
-[...]
+All statistical analyses were perfomed using *RStudio* (version 1.4.1717) [@RStudioTeam2020]and *R* (version 4.1.0) [@RCore2020] for Windows.
+
+
 
