--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11873,6 +11873,25 @@ These findings suggest that subjective listening effort depends on factors inclu
   urldate   = {2021-11-18},
 }
 
+@Article{Peirce2019,
+  author     = {Peirce, Jonathan and Gray, Jeremy R. and Simpson, Sol and MacAskill, Michael and Höchenberger, Richard and Sogo, Hiroyuki and Kastman, Erik and Lindeløv, Jonas Kristoffer},
+  journal    = {Behavior Research Methods},
+  title      = {{PsychoPy2}: {Experiments} in behavior made easy},
+  year       = {2019},
+  issn       = {1554-3528},
+  month      = feb,
+  number     = {1},
+  pages      = {195--203},
+  volume     = {51},
+  abstract   = {PsychoPy is an application for the creation of experiments in behavioral science (psychology, neuroscience, linguistics, etc.) with precise spatial control and timing of stimuli. It now provides a choice of interface; users can write scripts in Python if they choose, while those who prefer to construct experiments graphically can use the new Builder interface. Here we describe the features that have been added over the last 10 years of its development. The most notable addition has been that Builder interface, allowing users to create studies with minimal or no programming, while also allowing the insertion of Python code for maximal flexibility. We also present some of the other new features, including further stimulus options, asynchronous time-stamped hardware polling, and better support for open science and reproducibility. Tens of thousands of users now launch PsychoPy every month, and more than 90 people have contributed to the code. We discuss the current state of the project, as well as plans for the future.},
+  doi        = {10.3758/s13428-018-01193-y},
+  file       = {Springer Full Text PDF:https\://link.springer.com/content/pdf/10.3758%252Fs13428-018-01193-y.pdf:application/pdf},
+  language   = {en},
+  shorttitle = {{PsychoPy2}},
+  url        = {https://doi.org/10.3758/s13428-018-01193-y},
+  urldate    = {2021-11-19},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
