--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -151,8 +151,8 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   volume = {111},
   number = {2},
   pages = {225--236},
-  year = {200210.1037//0021-843X.111.2.225},
-  DOI = {},
+  year = {2002},
+  DOI = {10.1037//0021-843X.111.2.225},
   publisher = {American Psychological Association}
 }
 
